--- a/backendcloud/pom.xml
+++ b/backendcloud/pom.xml
@@ -8,7 +8,7 @@
     <modules>
         <module>matchingsystem</module>
         <module>backend</module>
-        <module>backend</module>
+        <module>botrunningsystem</module>
     </modules>
     <name>backendcloud</name>
     <description>backendcloud</description>
